# CS477_IIR_2024S

./: .gitignore  README.md  install.sh  install_arm.sh  requirements.txt  ros-foxy-gazebo-grasp-plugin_1.0.2-0focal_amd64.deb  ros-foxy-gazebo-grasp-plugin_1.0.2-0focal_arm64.deb  ros-foxy-gazebo-version-helpers_0.0.0-0focal_amd64.deb  ros-foxy-gazebo-version-helpers_0.0.0-0focal_arm64.deb  ros-foxy-roboticsgroup-upatras-gazebo-plugins_0.2.0-0focal_amd64.deb  ros-foxy-roboticsgroup-upatras-gazebo-plugins_0.2.0-0focal_arm64.deb
assignment_1/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
assignment_1/assignment_1/: gazebo_cartpole_p_v0.py  gazebo_cartpole_pd_v0.py  gazebo_cartpole_pid_v0.py  move_joint.py
assignment_2/: README.md  package.xml  setup.cfg  setup.py
assignment_2/assignment_2/: forward_kin.py  inverse_kin.py  misc.py  move_joint.py
assignment_3/: README.md  package.xml  setup.cfg  setup.py
assignment_3/assignment_3/: add_object.py  astar.py  astar_2d_test.py  astar_3d_test.py  min_jerk.py  move_astar.py  move_joint.py  quaternion.py
assignment_3/assignment_3/cs477_gym/: __init__.py
assignment_3/assignment_3/cs477_gym/envs/: __init__.py  reaching_2d_env.py  reaching_3d_env.py
docs/: common_sim.repos
manip_challenge/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
manip_challenge/config/: default_sim.yaml
manip_challenge/launch/: ur5_setup.launch.py  ur5_setup_launch.xml
manip_challenge/manip_challenge/: add_object.py  example1.py  example2.py  get_joint.py  get_pose.py  init_joints.py  item_list_pub.py  item_list_sub.py  misc.py  move_gripper.py  move_joint.py  world_model.py  world_model_gazebo.py
manip_challenge/models/ur5_base/: model.config
manip_challenge/worlds/: ur5_picking_challenge.world
tutorial_1/: README.md  package.xml  setup.cfg  setup.py
tutorial_1/docs/: 1_publisher_and_subscriber.md  2_service.md  3_parameter.md  4_create_pkg.md  5_Turtlebot3.md
tutorial_1/tutorial_1/: listener.py  ros_parameter.py  service_client.py  service_server.py  talker.py
tutorial_2/: README.md  package.xml  setup.cfg  setup.py
tutorial_2/docs/: 1_command_line_tools.md  2_rviz.md  3_urdf.md  4_sensor_data.md
tutorial_2/tutorial_2/: 1_printout.py  2_posestamp.py  3_posearray.py  4_gazebo_object.py  5_camera_image_saver.py  cube.urdf
tutorial_3/: README.md
tutorial_3/dataset/: car_assembly.scene  car_frame.stl  cylinders.scene
utils/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
utils/gazebo_ros_pkgs/gazebo_ros/src/: gazebo_ros_properties.cpp
utils/include/: package.txt
utils/riro-kdl/hrl_geom/: package.xml  setup.cfg  setup.py
utils/riro-kdl/hrl_geom/hrl_geom/: pose_converter.py
utils/riro-kdl/hrl_geom/hrl_geom/scripts/: example.py
utils/riro-kdl/pykdl_utils/: package.xml  setup.py
utils/riro-kdl/pykdl_utils/pykdl_utils/: joint_kinematics.py  kdl_kinematics.py  kdl_parser.py
