<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pidipidi52@gmail.com">daehyung</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies needed to compile this package. -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
